removed unused code and fixed multi tool requests
